# RLIE

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: README.md  THIRD_PARTY.md
data/real/dreaddit/: dreaddit_ind_test.json  dreaddit_ind_train.json  dreaddit_ind_val.json  dreaddit_ood.json
data/real/headline_binary/: headline_binary_ood.json  headline_binary_test.json  headline_binary_train.json
data/real/llamagc_detect/: WP_aigc_detect_test.json  WP_aigc_detect_train.json  WP_aigc_detect_val.json
data/real/persuasive_pairs/: persuasive_pairs_human_gt_ind_test.json  persuasive_pairs_human_gt_ind_train.json  persuasive_pairs_human_gt_ind_val.json  persuasive_pairs_human_gt_ood.json
rlie/: main.py  run_eval_only.py
rlie/core/: convergence.py  feature_manager.py  metrics.py  modeling.py  reporting.py  rule_utils.py  task_runner.py
rlie/datasets/: data_loader.py  labels.py  tasks.py
rlie/llm/: api_client_pool.py  parse_failure_recorder.py  parsing.py  prompt.py  rule_generator.py  rule_scorer.py  ruleset_eval.py
rlie/task_specs/real/deceptive_reviews/: metadata.json  prompts.yaml  task.yaml
rlie/task_specs/real/dreaddit/: metadata.json  prompts.yaml  task.yaml
rlie/task_specs/real/headline_binary/: metadata.json  prompts.yaml  task.yaml
rlie/task_specs/real/llamagc_detect/: metadata.json  prompts.yaml  task.yaml
rlie/task_specs/real/persuasive_pairs/: metadata.json  prompts.yaml  task.yaml
rlie/utils/: concurrent_config.py  eval_utils.py  register.py
(+2 files in other folders)
